--- a/module/nco/fibration-nco/.cproject
+++ b/module/nco/fibration-nco/.cproject
@@ -45,6 +45,9 @@
 									<listOptionValue builtIn="false" value="../Core/Inc"/>
 									<listOptionValue builtIn="false" value="../Drivers/STM32F3xx_HAL_Driver/Inc/Legacy"/>
 									<listOptionValue builtIn="false" value="../Drivers/CMSIS/Device/ST/STM32F3xx/Include"/>
+									<listOptionValue builtIn="false" value="../Drivers/fib-nco/module"/>
+									<listOptionValue builtIn="false" value="../Drivers/fib-nco/module/io/hardware"/>
+									<listOptionValue builtIn="false" value="../Drivers/fib-nco/module/io"/>
 								</option>
 								<inputType id="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c.228586415" superClass="com.st.stm32cube.ide.mcu.gnu.managedbuild.tool.c.compiler.input.c"/>
 							</tool>
