ignore all dummy source that will be writter later

--- a/Fibration/CMakeLists.txt
+++ b/Fibration/CMakeLists.txt
@@ -1,11 +1,12 @@
 cmake_minimum_required(VERSION 3.13)
 
 project(FibrationLib)
-
+	
 add_library(FibrationLib OBJECT 
-    fibration.cpp
-    fibration.hpp
-    )
+	# TODO
+	# fibration.cpp
+	fibration.hpp
+	)
 
 add_subdirectory(Components)
 
