--- a/Fibration/Components/CMakeLists.txt
+++ b/Fibration/Components/CMakeLists.txt
@@ -3,9 +3,10 @@ cmake_minimum_required(VERSION 3.13)
 project(Components)
 
 add_library(Components STATIC 
-    nco.cpp
-    nco.hpp
-    )
+	# TODO
+	# nco.cpp
+	nco.hpp
+	)
 
 add_subdirectory(Parts)
 
