added UART hardware support.

--- a/Tests/freertosBlinkyTest/CMakeLists.txt
+++ b/Tests/freertosBlinkyTest/CMakeLists.txt
@@ -37,6 +37,8 @@ set(SYSTEM_SRC
 	${ROOT}/System/MSP/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_rcc_ex.c
 	${ROOT}/System/MSP/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_tim.c
 	${ROOT}/System/MSP/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_tim_ex.c	
+	${ROOT}/System/MSP/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_uart.c	
+	${ROOT}/System/MSP/STM32F3xx_HAL_Driver/Src/stm32f3xx_hal_uart_ex.c	
 
 	# FreeRTOS source
 	${ROOT}/System/FreeRTOS/Source/croutine.c
