HAL operations moved to system.cpp. freertosBlinky test code cleanup.

--- a/Tests/freertosBlinkyTest/CMakeLists.txt
+++ b/Tests/freertosBlinkyTest/CMakeLists.txt
@@ -51,8 +51,12 @@ set(SYSTEM_SRC
 	${ROOT}/System/FreeRTOSConfig.h
 
 	# Fibration hardware interface
+	${ROOT}/System/system.cpp
+	${ROOT}/System/system.hpp
 	${ROOT}/System/gpio.cpp
-	${ROOT}/System/gpio.hpp
+	${ROOT}/System/gpio.hpp	
+	${ROOT}/System/log.cpp
+	${ROOT}/System/log.hpp
 )
 
 add_executable(${PROJECT_NAME} 
