--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -16,6 +16,10 @@
 		"label": "bf.debug",
 		"type": "shell",
 		"command": "cd Build; ./bf.debug.sh",
+		"group": {
+			"kind": "build",
+			"isDefault": true
+		}
 		"problemMatcher": []
 	},
 	{
