--- a/Tests/CMakeLists.txt
+++ b/Tests/CMakeLists.txt
@@ -2,5 +2,4 @@ cmake_minimum_required(VERSION 3.13)
 
 project(Modules)
 
-#add_subdirectory(makefileTest)
-add_subdirectory(freertosBlinkyTest)
+add_subdirectory(blinkTest)
