.vscode task build release before flash.

--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -80,7 +80,7 @@
 				"isDefault": true
 			},
 			"linux": {
-				"command": "cd Build; ./flash-to-stm32.sh Release/Tests/blinkTest/blinkTest.bin"
+				"command": "cd Build; ./build.release.sh; ./flash-to-stm32.sh Release/Tests/blinkTest/blinkTest.bin"
 			}
 		}
 	],
