--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -69,7 +69,7 @@
 			"type": "shell",
 			"group": "test",
 			"linux": {
-				"command": "cd Build; ./build.debug.sh; ./flash-to-stm32.sh Release/Tests/blinkTest/blinkTest.bin"
+				"command": "cd Build; ./build.debug.sh; ./flash-to-stm32.sh Debug/Tests/blinkTest/blinkTest.bin"
 			}
 		},
 		{
@@ -81,6 +81,9 @@
 			},
 			"linux": {
 				"command": "cd Build; ./build.release.sh; ./flash-to-stm32.sh Release/Tests/blinkTest/blinkTest.bin"
+			}
+			"presentation": {
+				"focus": true
 			}
 		}
 	],
